# timecapsule-data

./: .gitignore  BASELINE_v1.md  BENCHMARK_v2.md  IA_REDESIGN_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  OVERNIGHT_PLAN.md  README.md  analyze_catalog.py  corpus_schema.py  gutenberg_collector.py  ia_collector.py  internetarchive_collector.py  perseus_collector.py  pyproject.toml  validate_temporal_purity.py
docs/: IA_INDEX_DATABASE.md  LLM_OCR_CORRECTION_RESEARCH.md  NOISE_STRIPPING_DESIGN.md  OCR_CLEANING.md  OCR_CLEANUP_BEST_PRACTICES.md  OCR_VOCAB_ANALYSIS.md
rust-ocr-clean/: Cargo.toml  pyproject.toml
rust-ocr-clean/dictionaries/: en_med_words.txt  la.aff.bak  la_words.txt
rust-ocr-clean/src/: dictionary.rs  lib.rs
scripts/: analyze_boilerplate.py  analyze_cleanup_report.py  analyze_triage.py  analyze_vocab.py  build.py  collect_prewwi_corpus.py  reset_triage.py  test_cap_filter.py  test_dict.py  triage_status.py  validate_db_files.py
src/timecapsule_data/: __init__.py
src/timecapsule_data/collectors/: __init__.py  gutenberg.py  ia_download.py  ia_enrich.py  ia_index.py  internet_archive.py  internet_archive_v2.py  perseus.py
src/timecapsule_data/data/: known_vocab.txt
src/timecapsule_data/utils/: __init__.py  anachronistic_filter.py  dedup.py  dedup_v2.py  doc_triage.py  migrate_to_sqlite.py  ocr_cleanup.py  ocr_score.py  ocr_strip.py  ocr_symspell.py  ocr_vocab.py  quality.py  rust_ocr_clean.pyi  validate.py
