[project]
name = "timecapsule-data"
version = "0.1.0"
description = "Tools for collecting temporally-filtered text corpora for training time-constrained language models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "robotdad" }
]
requires-python = ">=3.11"
keywords = ["nlp", "corpus", "dataset", "historical", "gutenberg", "llm", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.28.0",
    "urllib3>=2.0.0",
    "internetarchive>=4.0.0",
    "datasketch>=1.6.0",
    "xxhash>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
# Main collectors
tc-gutenberg = "timecapsule_data.collectors.gutenberg:main"
tc-ia = "timecapsule_data.collectors.internet_archive_v2:main"
tc-perseus = "timecapsule_data.collectors.perseus:main"

# Utilities
tc-analyze = "timecapsule_data.utils.analyze:main"
tc-validate = "timecapsule_data.utils.validate:main"
tc-dedup = "timecapsule_data.utils.dedup_v2:main"
tc-ocr-clean = "timecapsule_data.utils.ocr_cleanup:main"
tc-quality = "timecapsule_data.utils.quality:main"

[project.urls]
Homepage = "https://github.com/robotdad/timecapsule-data"
Repository = "https://github.com/robotdad/timecapsule-data"
Issues = "https://github.com/robotdad/timecapsule-data/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timecapsule_data"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.pytest.ini_options]
