[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.uv]
# Rebuild when Rust source files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]

[project]
name = "rust-ocr-clean"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
